fixed some style and layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,13 +8,13 @@
     font-family: Arial, Helvetica, sans-serif;
   }
 
-  header {
+  /* header {
     background: #985EFF;
     padding: 20px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-  }
+  } */
 
   h2 {
     color: white;
@@ -30,7 +30,19 @@
   }
 
   section {
-    padding: 60px;
+    padding: 10px 60px ;
+  }
+
+  .btn {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .chart {
+    position: relative;
+    height:60vh;
+    width:60vw;
+    padding: 10px;
   }
 
   #modal_wrapper.overlay::before {
@@ -64,23 +76,13 @@
     display: block;
   }
 
-  #weather_wrapper {
-    background: #F2E7FE;
-    mix-blend-mode: normal;
-    border-radius: 0px 0px 20px 20px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
   section h3 {
     color: #985EFF;
   }
 
   #weather-search {
-    width: 35%;
-    text-align: right;
     margin: 3.5%;
-    color: #fff;
+    color: rgb(96, 8, 131);
     font-size: 18px;
     line-height: 1.3;
   }
@@ -91,28 +93,13 @@
     color: #f000f0;
   }
 
-  #search-button {
-    border: none;
-    display: block;
-    font-size: 16px;
-    color: #6200EE;
-    width: 100%;
-    margin-bottom: 15px;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-  }
-
   .weather-forecast {
-    width: 40%;
-    margin: 3.5%;
+    padding: 10px 60px ;
     
   }
 
   div h5 {
-    position: relative;
-    float: left;
-    display: inline-block
+    display: inline-block;
     height: 24px;
     left: 52px;
     right: 207px;
@@ -124,6 +111,10 @@
     line-height: 24px;
     letter-spacing: 0.15px;
     color: rgba(0, 0, 0, 0.87); 
+  }
+
+  .collapsible {
+    background-color: #6200EE;
   }
 
   #cityname {
